Login.feature, LoginPage, LoginStepDefinitions are created

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,6 +1,17 @@
 browser=chrome
 url=http://54.202.206.142/web/login
 
+#CREDENTIALS
+posmanager=posmanager50@info.com
+passwordposman=posmanager
+titleappears=POSManager50
+
+eventscrmmanager=eventscrmmanager30@info.com
+passwordeventsman=eventscrmmanager
+
+inventorymanager=imm20@info.com
+passwordinvman=inventorymanager
+
 purchasing_manager50=posmanager50@info.com
 purchasing_manager51=posmanager51@info.com
 purchasing_manager52=posmanager52@info.com
