--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url=http://54.202.206.142/web/login
+URL=http://54.202.206.142/web/login
 
 purchasing_manager50=posmanager50@info.com
 purchasing_manager51=posmanager51@info.com
