--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url=http://54.202.206.142/web/login
+URL=http://54.202.206.142/web/login
 
 #CREDENTIALS
 posmanager=posmanager50@info.com
